# opengl-renderer

./: .gitignore  CMakeLists.txt
assets/shader/: testshader.fs  testshader.vs
include/glad/: glad.h
src/: camera.h  gameobject.h  glad.c  main.cpp  mesh.h  model.cpp  model.h  shader.h
